@@ -5,7 +5,7 @@
 #' @param results A \linkS4class{DataFrame} containing the output from \code{\link{SingleR}},
 #' \code{\link{classifySingleR}}, \code{\link{combineCommonResults}}, or \code{\link{combineRecomputedResults}}.
 #' @param test A numeric matrix of log-normalized expression values where rows are genes and columns are cells.
-#' Each row should be named with the gene name.
+#' Each row should be named with the same gene name that was used to compute \code{results}.
 #'
 #' Alternatively, a \linkS4class{SummarizedExperiment} object containing such a matrix.
 #' @param label String specifying the label of interest.
@@ -14,6 +14,9 @@
 #' @param assay.type Integer scalar or string specifying the matrix of expression values to use if \code{test} is a \linkS4class{SummarizedExperiment}.
 #' @param use.pruned Logical scalar indicating whether the pruned labels should be used instead.
 #' @param order.by String specifying the column of the output of \code{\link[scran]{scoreMarkers}} with which to sort for interesting markers.
+#' @param display.row.names Character vector of length equal to the number of rows of \code{test},
+#' containing the names of the features to show on the heatmap (e.g., to replace IDs with symbols).
+#' If \code{NULL}, the existing row names of \code{test} are used.
 #' @param top Integer scalar indicating the top most interesting markers to show in the heatmap.
 #' @param BPPARAM A \linkS4class{BiocParallelParam} object specifying the parallelization scheme to use for marker scoring.
 #'
@@ -48,6 +51,7 @@ plotMarkerHeatmap <- function(
     label,
     other.labels=NULL,
     assay.type="logcounts",
+    display.row.names=NULL,
     use.pruned=FALSE,
     order.by="rank.logFC.cohen",
     top=20,
@@ -92,13 +96,19 @@ plotMarkerHeatmap <- function(
         to.show <- names(abundance)[order(abundance, decreasing=TRUE)]
     }
 
-    to.show <- head(to.show, top)
-    limits <- range(test, na.rm=TRUE)
+    to.show <- match(head(to.show, top), rownames(test))
     colnames(test) <- seq_len(ncol(test))
     col.order <- order(predictions)
+    test <- test[to.show,col.order,drop=FALSE]
+    predictions <- predictions[col.order]
 
+    if (!is.null(display.row.names)) {
+        rownames(test) <- display.row.names[rkeep][to.show]
+    }
+
+    limits <- range(test, na.rm=TRUE)
     pheatmap::pheatmap(
-        test[to.show,col.order,drop=FALSE],
+        test,
         breaks=seq(limits[1], limits[2], length.out=26),
         color=viridis::viridis(25),
         annotation_col=data.frame(labels=predictions, row.names=colnames(test)),
